--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,7 +1,7 @@
 .headerStyle {
     width: 100%;
     height: 50px;
-    background: #ccc;
+    background: #347EFF;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
 }
