--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -30,6 +30,7 @@
     width: 50px;
     height: 50px;
     line-height: 50px;
-    color: #1890ff;
+    color: #fff;
+    cursor: pointer;
     font-size: 16px;
 }
