--- a/src/components/detail/index.css
+++ b/src/components/detail/index.css
@@ -22,13 +22,17 @@
 
 .detailLeft {
     float: left;
-    width: 20%;
+    width: 30%;
     margin-bottom: 16px;
+}
+
+.detailLeft .ant-btn {
+    margin-right: 10px;
 }
 
 .detailRight {
     float: left;
-    margin: 0 0 0 24%;
+    margin: 0 0 0 14%;
     min-width: 530px;
     max-width: 530px;
     border-radius: 10px;
