--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -17,12 +17,12 @@
     margin-top: 10px;
     width: 100px;
     height: 30px;
-    border: 1px solid #fff;
-    border-radius: 10px;
     text-align: center;
     line-height: 30px;
     color: #fff;
     font-weight: bold;
+    font-size: 18px;
+    font-family: PingFang SC;
 }
 
 .headerStyle .container .login {
