--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -18,11 +18,15 @@
     width: 100px;
     height: 30px;
     text-align: left;
-    line-height: 30px;
-    color: #fff;
     font-weight: bold;
     font-size: 18px;
-    font-family: PingFang SC;
+    font-family: "PingFang SC";
+}
+
+.headerStyle .container .logo a {
+    line-height: 30px;
+    color: #fff;
+    text-decoration: none;
 }
 
 .headerStyle .container .login {
