--- a/src/components/detail/index.css
+++ b/src/components/detail/index.css
@@ -1,6 +1,7 @@
 .detailPage {
-    width: 80%;
-    margin: 0 auto;
+    margin: 0 8% 50px 0;
+    float: right;
+    width: 72%;
 }
 
 .ant-collapse-borderless{
