--- a/src/components/job/index.css
+++ b/src/components/job/index.css
@@ -1,6 +1,7 @@
 .jobList {
-    margin: 0 auto;
-    width: 80%;
+    margin: 0 8% 50px 0;
+    float: right;
+    width: 72%;
 }
 
 .jobList .reload {
