--- a/src/components/list/index.css
+++ b/src/components/list/index.css
@@ -1,6 +1,7 @@
 .appList {
-    margin: 0 auto;
-    width: 80%;
+    margin: 0 8% 50px 0;
+    float: right;
+    width: 72%;
 }
 
 .ant-collapse-borderless{
