--- a/src/components/sidebar/index.css
+++ b/src/components/sidebar/index.css
@@ -1,10 +1,9 @@
 #sidebar {
-    position: absolute;
-    width: 10%;
+    width: 16%;
     height: 90%;
-    background: #fff;
-    left: 8%;
-    top: 70px;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
-    border-radius: 4px;
+    float: left;
+}
+
+.ant-cascader-menus .ant-cascader-menu {
+    min-width: 138px;
 }
