--- a/src/components/sidebar/index.css
+++ b/src/components/sidebar/index.css
@@ -1,7 +1,13 @@
 #sidebar {
     width: 10%;
     height: 90%;
-    float: left;
+    margin-left: 20px;
+    margin-top: 70px;
+
+    overflow: auto;
+    height: 100vh;
+    position: fixed;
+    left: 0;
 }
 
 .ant-cascader-menus .ant-cascader-menu {
