--- a/src/components/pages/index.css
+++ b/src/components/pages/index.css
@@ -1,5 +1,6 @@
 #page {
-    margin-top: 70px;
-    width: 88%;
-    float: right;
+    /* margin-top: 70px; */
+    /* width: 88%; */
+    /* float: right; */
+    margin: 0 15% 0 15%;
 }
