--- a/src/components/list/index.css
+++ b/src/components/list/index.css
@@ -1,4 +1,5 @@
-.appList {
+.appList tbody tr {
+    cursor: pointer;
 }
 
 .ant-collapse-borderless{
@@ -8,4 +9,3 @@
     border-radius: 2px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
 }
-
