--- a/src/kae/App.css
+++ b/src/kae/App.css
@@ -4,9 +4,104 @@ body {
     background: #eee;
 }
 
+.col-ellipsis{
+    overflow : hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
 .box-container {
     width: 98%;
     height: 90%;
     margin: 0 auto;
-    padding-top: 80px;
+    padding-top: 70px;
+}
+
+.table-operations {
+    margin-bottom: 10px;
+}
+
+.appList tbody tr {
+    cursor: pointer;
+}
+
+.detailPage {
+    width: 100%;
+    float: right;
+}
+
+.detailInfo {
+    background: #fff;
+}
+
+.detailInfo .ant-btn {
+    margin-right: 10px;
+}
+
+.appHeader {
+    padding: 10px 10px 10px 24px;
+    font-size: 2em;
+    color: #4caf50;
+    height: 31px;
+}
+.appBody {
+    margin-top: 10px;
+    padding: 24px;
+}
+.ant-collapse-borderless{
+    margin-bottom: 20px;
+    /* background-color: #fff; */
+    /* border: 1px solid rgba(0,0,0,.12); */
+    /* border-radius: 2px; */
+    /* box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12); */
+}
+
+.btnIcon {
+    cursor: pointer;
+    transform:rotate(90deg);
+    -ms-transform:rotate(90deg); /* Internet Explorer */
+    -moz-transform:rotate(90deg); /* Firefox */
+    -webkit-transform:rotate(90deg); /* Safari 和 Chrome */
+    -o-transform:rotate(90deg); /* Opera */
+}
+
+.detailLeft {
+    float: left;
+    min-width: 60%;
+    margin-bottom: 16px;
+}
+
+.detailLeft .ant-btn {
+    margin-right: 10px;
+}
+
+/* ================ job ======================== */
+.jobList .reload {
+    color: #1890ff;
+    margin-left: 20px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.jobList .reload:hover {
+    transform: rotate(360deg);
+    transition: transform 1s;
+}
+
+.ant-collapse-borderless{
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.12);
+    border-radius: 2px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
+}
+
+#yaml {
+    margin: 20px 0;
+}
+
+.create-job-button {
+    left: 40%;
 }
