--- a/src/kae/App.css
+++ b/src/kae/App.css
@@ -80,7 +80,25 @@ body {
 .detailLeft .ant-btn {
     margin-right: 10px;
 }
+#build-output p {
+  -ms-word-break: break-all;
+  word-break: break-all;
 
+  /* Non standard for webkit */
+  word-break: break-word;
+
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+
+  margin: 0;
+}
+
+#build-output pre {
+  word-break: break-all;
+  word-wrap: break-word;
+}
 /* ================ job ======================== */
 .jobList .reload {
     color: #1890ff;
